[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
    "Cython",
    "numpy>=1.20, <=1.26.4",
    "scipy>=1.0.0",
]

#cython is needed for build to execute because some of Pyapprox cython extensions use scipy cython functions


[project]
name = "pyapprox"
version = "1.0.3"
description = "High-dimensional function approximation and estimation"
requires-python = '>=3.6'
license = {file = 'LICENSE'}
readme = "README.md"
authors = [
    {name = "John D. Jakeman", email = "29109026+jdjakem@users.noreply.github.com"},
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]    
dependencies = [
    'numpy >= 1.20, <=1.26.4',
    'matplotlib',
    'scipy >= 1.0.0',
    'Cython',
    'sympy',
    'torch<=2.2.0',
    'scikit-learn',
    'coverage>=6.4',
    'pytest-cov',
    'pytest>=4.6',
    'networkx',
    'numba',
    'scikit-fem',
    'umbridge',
]


[project.optional-dependencies]
docs = ['numpydoc', 'sphinx', 'sphinx_automodapi', 'sphinx_rtd_theme',
        'sphinx-gallery', 'jupyter']
# yapf 0.40.2 has bug that prevents its use with elpy
lint = ["jedi", "black", "autopep8", "yapf==0.40.1", "flake8"]

[tool.coverage]
    [tool.coverage.run]
    omit = [
        '__init__.py',
    ]

    [tool.coverage.report]
    skip_empty = true
