[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
    "numpy>=1.20",
    "scipy>=1.0.0",
]

[project]
name = "pyapprox"
version = "1.0.3"
description = "High-dimensional function approximation and estimation"
requires-python = '>=3.10'
license = {file = 'LICENSE'}
readme = "README.md"
authors = [
    {name = "John D. Jakeman", email = "29109026+jdjakem@users.noreply.github.com"},
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]    
dependencies = [
    'numpy >= 2.0',
    'matplotlib',
    'scipy >= 1.0.0',
    'sympy',
    'torch>=2.5',
    'coverage>=6.0',
    'pytest-cov',
    'pytest>=4.6',
    'networkx',
    'numba',
    'scikit-fem',
    'umbridge',
    'cvxpy',
]


[project.optional-dependencies]
docs = ['numpydoc', 'sphinx', 'sphinx_automodapi', 'sphinx_rtd_theme',
        'sphinx-gallery', 'jupyter']
# yapf 0.40.2 has bug that prevents its use with elpy
lint = ["jedi", "black", "autopep8", "yapf==0.40.1", "flake8", "mypy"]
gpu = ["torchaudio", "torchvision"]
all = ['numpydoc', 'sphinx', 'sphinx_automodapi', 'sphinx_rtd_theme',
       'sphinx-gallery', 'jupyter', "jedi", "black", "autopep8",
       "yapf==0.40.1", "flake8", "torchaudio", "torchvision"
       ]

# coverage must be run from the directory of this file
# for coverage options to be utilized
[tool.coverage]
[tool.coverage.run]
omit = [
    '__init__.py',
]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
'@abstractmethod',
'def __repr__',
]
exclude_also = [
'raise NotImplementedError',
'raise ValueError',
'raise TypeError',
'raise RuntimeError',
'jacobian_implemented',
'apply_jacobian_implemented',
'hessian_implemented',
'apply_hessian_implemented',
'apply_weighted_hessian_implemented',
'def plot'
]

[tool.black]
line-length=79
